# zeno

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: chat.py  tool_use.py
tests/: test_zeno.py
zeno/: __init__.py  cli.py  config.py  core.py  llmfit.py  logging.py  models.py  ollama.py  sessions.py  tools.py  types.py  vllm_family.py
