[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zeno"
version = "0.1.0"
description = "A minimal local-first agent framework and CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "zeno contributors" }]
keywords = ["agent", "vllm", "local-llm", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
mac = ["vllm-mlx>=0.2.7"]
cuda = ["vllm>=0.10"]

[project.scripts]
zeno = "zeno.cli:main"

[tool.setuptools]
packages = ["zeno"]
